--- a/public/landingpage.html
+++ b/public/landingpage.html
@@ -9,6 +9,14 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+
+  <div class="container">
+    <div style="margin-top: 300px;" class="jumbotron text-center">
+      <h1 class="display-4">Note Taker <span role="img" aria-label="Memo">📝</span></h1>
+      <h4 class="mt-4">Take notes with Express</h4>
+      <a class="btn btn-success btn-lg mt-4" href="/notespage" role="button">Get Started</a>
+    </div>
+  </div>
   
 </body>
 </html>
